// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Script Script 1`] = `
<div
  style="transform:scale(1);height:100vh"
>
  <div
    class="makeStyles-root"
  >
    <div
      class="makeStyles-root"
    >
      <div
        class=""
      >
        <span
          class="makeStyles-subtitle1"
        >
          post_user_0
        </span>
      </div>
      <div
        class="makeStyles-filler"
      />
      <div
        class=""
        data-cy="script-header-collapse-button-1"
        title="Uncollapse"
      >
        <img
          alt="Down carret"
          class="makeStyles-downCarretIcon"
          src="down_carret.svg"
        />
      </div>
    </div>
    <div
      class="MuiCollapse-container MuiCollapse-hidden"
      style="min-height:0px"
    >
      <div
        class="MuiCollapse-wrapper"
      >
        <div
          class="MuiCollapse-wrapperInner"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Script Script with XML body 1`] = `
<div
  style="transform:scale(1);height:100vh"
>
  <div
    class="makeStyles-root"
  >
    <div
      class="makeStyles-root"
    >
      <div
        class=""
      >
        <span
          class="makeStyles-subtitle1"
        >
          post_user_1
        </span>
      </div>
      <div
        class="makeStyles-filler"
      />
      <div
        class=""
        data-cy="script-header-collapse-button-1"
        title="Uncollapse"
      >
        <img
          alt="Down carret"
          class="makeStyles-downCarretIcon"
          src="down_carret.svg"
        />
      </div>
    </div>
    <div
      class="MuiCollapse-container MuiCollapse-hidden"
      style="min-height:0px"
    >
      <div
        class="MuiCollapse-wrapper"
      >
        <div
          class="MuiCollapse-wrapperInner"
        />
      </div>
    </div>
  </div>
</div>
`;
